[gd_scene load_steps=4 format=3 uid="uid://qil7lu223axb"]

[ext_resource type="Script" path="res://objectives.gd" id="1_wes5e"]
[ext_resource type="PackedScene" uid="uid://caqby83wxla6h" path="res://objectives/single_objective.tscn" id="2_cdmwv"]
[ext_resource type="PackedScene" uid="uid://cye4idx4wghvo" path="res://objectives/single_objective_numbered.tscn" id="3_ohtxb"]

[node name="ObjectivesChapter1" type="Node2D"]
script = ExtResource("1_wes5e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -206.0
offset_bottom = 221.0
grow_horizontal = 0
color = Color(0, 0, 0, 0.501961)

[node name="Title" type="Label" parent="CanvasLayer"]
offset_left = 949.0
offset_top = 2.0
offset_right = 1149.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 40
text = "Objectives
"

[node name="Objectives" type="Node2D" parent="CanvasLayer"]

[node name="DrinkObjective" parent="CanvasLayer/Objectives" instance=ExtResource("2_cdmwv")]
offset_left = 988.0
offset_top = 67.0
offset_right = 1590.0
offset_bottom = 150.0
scale = Vector2(0.25, 0.25)
text = "  Drink"

[node name="EatObjective" parent="CanvasLayer/Objectives" instance=ExtResource("2_cdmwv")]
offset_left = 988.0
offset_top = 107.0
offset_right = 1590.0
offset_bottom = 190.0
scale = Vector2(0.25, 0.25)
text = "  Eat"

[node name="FishObjective" parent="CanvasLayer/Objectives" instance=ExtResource("3_ohtxb")]
offset_left = 988.0
offset_top = 147.0
offset_right = 1590.0
offset_bottom = 230.0
scale = Vector2(0.25, 0.25)
text = "  Collect Fish"

[node name="SleepObjective" parent="CanvasLayer/Objectives" instance=ExtResource("2_cdmwv")]
offset_left = 988.0
offset_top = 187.0
offset_right = 1590.0
offset_bottom = 270.0
scale = Vector2(0.25, 0.25)
text = "  Sleep"
